--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,78 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="carousel container-fluid">
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+    </ol>
 
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-
-<body>
-
-
-  <div class="container-fluid">
-    <h2>Carousel Example</h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-
-        <div class="item active">
-          <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/81992C.jpg"
-            alt="Khóa học Advanced Power Query" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Khóa học Advanced Power Query</h3>
-            <p>Trung tâm tư vấn và đào tạo UniTrain
-              Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
-            </p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2021/01/04/FB5CFC.jpg"
-            alt="Digital Marketing F&B Workshop" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Digital Marketing F&B Workshop</h3>
-            <p>Spiced Co-working
-              15/1 Duong so 10, Binh An Ward, Quận 2, Thành Phố Hồ Chí Minh
-            </p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/61014C.jpg"
-            alt="Khóa học Ứng dụng SQL trong xử lý dữ liệu" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Khóa học Ứng dụng SQL trong xử lý dữ liệu</h3>
-            <p>Trung tâm tư vấn và đào tạo UniTrain
-              Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
-            </p>
-          </div>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner container-fluid">
+      <div class="carousel-item active">
+        <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/61014C.jpg" class="d-block w-100"
+          alt="Khóa học Ứng dụng SQL trong xử lý dữ liệu">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="jumbotron-heading ">Khóa học Ứng dụng SQL trong xử lý dữ liệu</h3>
+          <p class="lead">Trung tâm tư vấn và đào tạo UniTrain
+            Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
+          </p>
+          <p>
+            <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+            <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
+          </p>
         </div>
 
       </div>
 
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <div class="carousel-item">
+        <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2020/11/22/81992C.jpg" class="d-block w-100"
+          alt="Khóa học Advanced Power Query">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="jumbotron-heading ">Khóa học Advanced Power Query</h3>
+          <p class="lead">Trung tâm tư vấn và đào tạo UniTrain
+            Lầu 4, tòa nhà Thiên Sơn, 5 Nguyễn Gia Thiều, phường 6, Quận 3, Thành Phố Hồ Chí Minh
+          </p>
+          <p>
+            <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+            <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="https://images.tkbcdn.com/1/1560/600/Upload/eventcover/2021/01/04/FB5CFC.jpg" class="d-block w-100"
+          alt="Digital Marketing F&B Workshop">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="jumbotron-heading ">Digital Marketing F&B Workshop</h3>
+          <p class="lead">Spiced Co-working
+            15/1 Duong so 10, Binh An Ward, Quận 2, Thành Phố Hồ Chí Minh
+          </p>
+          <p>
+            <a href="#" class="btn btn-outline-primary my-2">Xem chi tiết</a>
+            <a href="#" class="btn btn-outline-success my-2">Đăng kí tham gia</a>
+          </p>
+        </div>
+      </div>
+      
     </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
   </div>
-
-</body>
-
-</html>
+</div>
