--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -75,9 +75,9 @@
   <div class="footer-bottom">
     <p class="col-lg-12 footer-text text-center">
       Copyright &copy;
-      <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-      made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-        target="_blank">Colorlib</a>
+      <script>document.write(new Date().getFullYear());</script> All rights reserved | This website is
+      made by <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#"
+        target="_blank">Conference-K16</a>
     </p>
   </div>
 </footer>
