--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,60 +1,73 @@
-<nav class="navbar navbar-expand-lg shadow-lg mb-4 navbar-dark fixed-top d-flex" style="background-color: #189EFF;">
-  <a class="navbar-brand" href="./">
-    <img src="./public/images/logo.svg" class="card-img-top" alt="logo" title="logo" style="width:70px;">
-  </a>
+<nav class="navbar navbar-expand-lg shadow-lg navbar-dark fixed-top" style="background-color: #189EFF;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="./">
+      <img src="./public/images/logo.svg" class="card-img-top" alt="logo" title="logo" style="width:70px;">
+    </a>
 
-  <button class="navbar-toggler sm" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="navbar-collapse collapse show d-flex" id="navbarsExampleDefault">
-    <form class="form-inline form-row my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <div class="row collapse navbar-collapse" id="navbarSupportedContent">
+    
+      <form class=" col-sm-6 d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Search</button>
+      </form>
 
+      <ul class="col-sm-6 d-flex justify-content-end navbar-nav mb-2 mb-lg-0">
 
-    <ul class="navbar-nav mr-sm-2 ml-auto">
-      <li class="nav-justified dropdown ">
-        <a class="nav-link dropdown-toggle text-light" href="http://example.com" id="dropdown01" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-          Nguyen Thi Ngoc Nhu
-        </a>
-        <div class="dropdown-menu flex-fill" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="./user/inforuser">
-            <i class="fa fa-user" aria-hidden="true"></i>
-            Xem và chỉnh sủa thông tin cá nhân
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+            Nguyễn Thị Ngọc Như
           </a>
-          <a class="dropdown-item" href="#">
-            <i class="fa fa-book" aria-hidden="true"></i>
-            Xem danh sách hội nghị đã đăng kí
-          </a>
-          <a class="dropdown-item" href="#">
-            <i class="bi bi-gear-fill"></i>
-            <i class="fa fa-gavel" aria-hidden="true"></i>
-            Cài đặt
-          </a>
-          <a class="dropdown-item" href="#">
-            <i class="fa fa-sign-out" aria-hidden="true"></i>
-            Đăng xuất
-          </a>
-        </div>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">
-          <i class="fa fa-bell" aria-hidden="true"></i>
-          Thông báo
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Thoát</a>
-      </li>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" href="./user/info">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                Xem và chỉnh sửa thông tin cá nhân
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="./info">
+                <i class="fa fa-book" aria-hidden="true"></i>
+                Xem danh sách hội nghị đã đăng kí
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="./index">
+                <i class="fa fa-lock" aria-hidden="true"></i>
+                Cài đặt
+              </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">
+                <i class="fa fa-sign-out" aria-hidden="true"></i>
+                Đăng xuất
+              </a>
+            </li>
+          </ul>
+        </li>
 
-    </ul>
-
-
+        <li class="nav-item active">
+          <a class="nav-link" href="#">
+            <i class="fa fa-bell" aria-hidden="true"></i>
+            Thông báo
+          </a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">
+            Thoát
+          </a>
+        </li>
+        
+      </ul>
+    </div>
   </div>
 </nav>
