--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg shadow-lg navbar-dark fixed-top" style="background-color: #189EFF;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./">
+    <a class="navbar-brand" href="/">
       <img src="http://localhost:3000/public/images/logo.svg" class="card-img-top" alt="logo" title="logo"
         style="width:70px;">
     </a>
@@ -10,65 +10,77 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="row collapse navbar-collapse" id="navbarSupportedContent">
 
-      <form class=" col-sm-6 d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
 
-      <ul class="col-sm-6 d-flex justify-content-end navbar-nav mb-2 mb-lg-0">
+    <form class=" col-sm-6 d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-light" type="submit">Search</button>
+    </form>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-            Nguyễn Thị Ngọc Như
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li>
-              <a class="dropdown-item" href="./user/info">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                Xem và chỉnh sửa thông tin cá nhân
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="./info">
-                <i class="fa fa-book" aria-hidden="true"></i>
-                Xem danh sách hội nghị đã đăng kí
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="./index">
-                <i class="fa fa-lock" aria-hidden="true"></i>
-                Cài đặt
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">
-                <i class="fa fa-sign-out" aria-hidden="true"></i>
-                Đăng xuất
-              </a>
-            </li>
-          </ul>
-        </li>
 
-        <li class="nav-item active">
-          <a class="nav-link" href="#">
-            <i class="fa fa-bell" aria-hidden="true"></i>
-            Thông báo
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">
-            Thoát
-          </a>
-        </li>
 
-      </ul>
-    </div>
+    <form id="frmLogout" method="POST" action="/user/logout"></form>
+    <ul class="col-sm-4 d-flex justify-content-end navbar-nav mb-2 mb-lg-0">
+      {{#if isAuth}}
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button"
+          data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+          <b>{{authUser.name}}</b>
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li>
+            <a class="dropdown-item" href="/user/info">
+              <i class="fa fa-user" aria-hidden="true"></i>
+              Xem và chỉnh sửa thông tin cá nhân
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="/user/info">
+              <i class="fa fa-book" aria-hidden="true"></i>
+              Xem danh sách hội nghị đã đăng kí
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="/index">
+              <i class="fa fa-lock" aria-hidden="true"></i>
+              Cài đặt
+            </a>
+          </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li>
+            <a class="dropdown-item" href="javascript: $('#frmLogout').submit();">
+              <i class="fa fa-sign-out" aria-hidden="true"></i>
+              Đăng xuất
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <i class="fa fa-bell" aria-hidden="true"></i>
+          Thông báo
+        </a>
+      </li>
+      {{else}}
+      <li class="nav-item active">
+        <a class="btn btn-outline-light me-2" role="button" aria-expanded="false" href="/auth/login">
+          Đăng nhập
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="btn btn-light" href="/auth/signup">
+          Đăng kí
+        </a>
+      </li>
+      {{/if}}
+
+
+
+
+    </ul>
+
   </div>
 </nav>
