--- a/views/vwAuth/changepassword.hbs
+++ b/views/vwAuth/changepassword.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>500</title>
+  <title>Đổi mật khẩu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,37 +31,37 @@
 
         <div class="card shadow-lg mx-auto col-md-4 align-self-md-center" style="border-radius: 40px;">
           <div class="card-body text-center">
-            <h1 class="card-title font-weight-bold" style="color: #666666;">Log in</h1>
+            <h1 class="card-title font-weight-bold" style="color: #666666;">Thay đổi mật khẩu</h1>
 
             <form class="mb-3">
+
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Username , phone or email example:name@example.com">
-                <label for="floatingInput">Username, phone or email</label>
+                <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Mật khẩu">
+                <label for="floatingPassword">Mật khẩu</label>
               </div>
+
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="password" class="form-control rounded-pill" id="floatingPassword"
+                  placeholder="Nhập lại mật khẩu">
+                <label for="floatingPassword">Nhập lại mật khẩu</label>
               </div>
-              <div class="form-check mb-2 d-flex mt-lg-1">
-                <input type="checkbox" class="form-check-input rounded-pill" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
+
+
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;">
-                Log in
+                Change password
               </button>
 
 
             </form>
 
             <div class="d-flex justify-content-between">
-              <a class=" " href="/forgetpassword" role="button">
-                Forget password
+              <a class=" " href="/auth/login" role="button">
+                Log in
               </a>
 
-              <a class="" href="/signup" role="button">
+              <a class="" href="/auth/signup" role="button">
                 Sign up
               </a>
             </div>
@@ -72,7 +72,7 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
