--- a/views/vwAuth/forgetpassword.hbs
+++ b/views/vwAuth/forgetpassword.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>500</title>
+  <title>Quên mật khẩu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,30 +31,30 @@
 
         <div class="card shadow-lg mx-auto col-md-4 align-self-md-center" style="border-radius: 40px;">
           <div class="card-body text-center">
-            <h1 class="card-title font-weight-bold" style="color: #666666;">Forget password</h1>
+            <h1 class="card-title font-weight-bold" style="color: #666666;">Quên mật khẩu</h1>
 
             <form class="mb-3">
               <div class="form-floating mb-3">
                 <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Email example:name@example.com">
+                  placeholder="Email ví dụ:name@example.com">
                 <label for="floatingInput">Email</label>
               </div>
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;">
-                Confirm Email
+                Xác nhận Email
               </button>
 
 
             </form>
 
             <div class="d-flex justify-content-between">
-              <a class=" " href="/login" role="button">
-                Log in
+              <a class=" " href="/auth/login" role="button">
+                Đăng nhập
               </a>
 
-              <a class="" href="/signup" role="button">
-                Sign up
+              <a class="" href="/auth/signup" role="button">
+                Đăng ký tài khoản mới
               </a>
             </div>
 
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
