--- a/views/vwAuth/login.hbs
+++ b/views/vwAuth/login.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>500</title>
+  <title>Đăng nhập</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,38 +31,37 @@
 
         <div class="card shadow-lg mx-auto col-md-4 align-self-md-center" style="border-radius: 40px;">
           <div class="card-body text-center">
-            <h1 class="card-title font-weight-bold" style="color: #666666;">Change password</h1>
+            <h1 class="card-title font-weight-bold" style="color: #666666;">Đăng nhập</h1>
 
             <form class="mb-3">
-
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="text" name="user_name" class="form-control rounded-pill" id="txtUsername" placeholder="Username , phone or email example:name@example.com">
+                <label for="floatingInput">Tên đăng nhập, số điện thoại hoặc email</label>
               </div>
-
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword"
-                  placeholder="Confirm password">
-                <label for="floatingPassword">Confirm password</label>
+                <input type="password" name="password" class="form-control rounded-pill" id="txtPassword" placeholder="Password">
+                <label for="floatingPassword">Mật khẩu</label>
               </div>
-
-
+              <div class="form-check mb-2 d-flex mt-lg-1">
+                <input type="checkbox" class="form-check-input rounded-pill" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Lưu lại trạng thái đăng nhập</label>
+              </div>
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;">
-                Change password
+                Đăng nhập
               </button>
 
 
             </form>
 
             <div class="d-flex justify-content-between">
-              <a class=" " href="/login" role="button">
-                Log in
+              <a class=" " href="/auth/forgetpassword" role="button">
+                Quên mật khẩu
               </a>
 
-              <a class="" href="/signup" role="button">
-                Sign up
+              <a class="" href="/auth/signup" role="button">
+                Đăng ký tài khoản mới
               </a>
             </div>
 
@@ -72,7 +71,7 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
