--- a/views/vwAuth/signup.hbs
+++ b/views/vwAuth/signup.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>500</title>
+  <title>Đăng ký</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,50 +31,47 @@
 
         <div class="card shadow-lg mx-auto col-md-4 align-self-md-center" style="border-radius: 40px;">
           <div class="card-body text-center">
-            <h1 class="card-title font-weight-bold" style="color: #666666;">Sign up</h1>
+            <h1 class="card-title font-weight-bold" style="color: #666666;">Đăng ký</h1>
 
             <form class="mb-3">
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-pill" id="floatingInput" placeholder="Full name">
-                <label for="floatingInput">Full name</label>
+                <input type="text" name="name" class="form-control rounded-pill" id="floatingInput" placeholder="Họ và tên">
+                <label for="floatingInput">Họ và tên</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Email example:name@example.com">
+                <input type="email" name="email" class="form-control rounded-pill" id="floatingInput"
+                  placeholder="Email ví dụ:name@example.com">
                 <label for="floatingInput">Email</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-pill" id="floatingInput"
-                  placeholder="Username, phone or email example:name@example.com">
-                <label for="floatingInput">User name</label>
+                <input type="text" name="user_name" class="form-control rounded-pill" id="floatingInput"
+                  placeholder="Tên đăng nhập, điện thoại hoặc email ví dụ:name@example.com">
+                <label for="floatingInput">Tên đăng nhập</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="password" name="password" class="form-control rounded-pill" id="floatingPassword" placeholder="Mật khẩu">
+                <label for="floatingPassword">Mật khẩu</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="password" class="form-control rounded-pill" id="floatingPassword"
-                  placeholder="Confirm password">
-                <label for="floatingPassword">Confirm password</label>
+                  placeholder="Nhập lại mật khẩu">
+                <label for="floatingPassword">Nhập lại mật khẩu</label>
               </div>
-
 
               <button type="submit" class="btn btn-success rounded-pill w-100"
                 style="height: 55px; background-color: #5AAC44; font-size: larger;">
-                Sign up
+                Đăng ký tài khoản
               </button>
-
 
             </form>
 
             <div class="d-flex justify-content-between">
               <a class=" " href="/" role="button">
                 <i class="fa fa-home" aria-hidden="true"></i>
-                Home
+                Trang chủ
               </a>
-
-              <a class="" href="/login" role="button">
-                Log in
+              <a class="" href="/auth/login" role="button">
+                Đăng nhập
               </a>
             </div>
 
@@ -84,7 +81,7 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
