--- a/views/vwUser/info.hbs
+++ b/views/vwUser/info.hbs
@@ -1,3 +1,55 @@
+{{#section 'css'}}
+    
+{{/section}}
+ 
+{{#section 'js'}}
+     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+  <script>
+
+    $.ajax({
+      url: 'http://localhost:3000/user',
+      method: 'GET',
+      dataType: 'json',
+      beforeSend: request => {
+        request.setRequestHeader('x-access-token', localStorage.getItem('x-access-token'));
+      }
+    }).done(data => {
+      console.log('data: ', data)
+    });
+
+    function showEdit(id) {
+      var edit_id = id + "_edit"
+      var info_id = id + "_info"
+      var v_edit = document.getElementById(edit_id)
+      v_edit.style.display = "flex"
+      var v_info = document.getElementById(info_id)
+      v_info.style.display = "none"
+    }
+    function hideEdit(id) {
+      var edit_id = id.substr(0, 1) + "_edit"
+      var info_id = id.substr(0, 1) + "_info"
+      var v_edit = document.getElementById(edit_id)
+      var v_info = document.getElementById(info_id)
+      v_edit.style.display = "none"
+      v_info.style.display = "flex"
+    }
+  </script>
+{{/section}}
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="container">
 
   <h4>Thông tin tài khoản</h4>
@@ -149,39 +201,7 @@
 
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-  <script>
-
-    $.ajax({
-      url: 'http://localhost:3000/user',
-      method: 'GET',
-      dataType: 'json',
-      beforeSend: request => {
-        request.setRequestHeader('x-access-token', localStorage.getItem('x-access-token'));
-      }
-    }).done(data => {
-      console.log('data: ', data)
-    });
-
-    function showEdit(id) {
-      var edit_id = id + "_edit"
-      var info_id = id + "_info"
-      var v_edit = document.getElementById(edit_id)
-      v_edit.style.display = "flex"
-      var v_info = document.getElementById(info_id)
-      v_info.style.display = "none"
-    }
-    function hideEdit(id) {
-      var edit_id = id.substr(0, 1) + "_edit"
-      var info_id = id.substr(0, 1) + "_info"
-      var v_edit = document.getElementById(edit_id)
-      var v_info = document.getElementById(info_id)
-      v_edit.style.display = "none"
-      v_info.style.display = "flex"
-    }
-  </script>
 
   {{!-- <button type="button" class="btn btn-primary btn-sm">Chỉnh sửa</button> --}}
 </div>
