--- a/views/vwAuth/signup.hbs
+++ b/views/vwAuth/signup.hbs
@@ -49,7 +49,8 @@
                 <label for="txtUsername">Tên đăng nhập</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" name="password" class="form-control rounded-pill" id="txtPassword" placeholder="Mật khẩu">
+                <input type="password" name="password" class="form-control rounded-pill" id="txtPassword"
+                  placeholder="Mật khẩu">
                 <label for="txtPassword">Mật khẩu</label>
               </div>
               <div class="form-floating mb-3">
@@ -58,8 +59,8 @@
                 <label for="txtConfirmPassword">Nhập lại mật khẩu</label>
               </div>
 
-              <button type="submit" class="btn btn-success rounded-pill w-100"
-                style="height: 55px; background-color: #5AAC44; font-size: larger;">
+              <button type="button" class="btn btn-success rounded-pill w-100"
+                style="height: 55px; background-color: #5AAC44; font-size: larger;" onclick="signUp()">
                 Đăng ký tài khoản
               </button>
 
@@ -84,6 +85,39 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+
+  <script>
+    const signUp = _ => {
+      console.log('sign up call')
+      $(_ => {
+        let password = $('#txtPassword').val();
+        let passwordConfirm = $('#txtConfirmPassword').val();
+        if (password != passwordConfirm) return;
+
+        let data = {
+          name: $('#txtName').val(),
+          user_name: $('#txtUsername').val(),
+          email: $('#txtEmail').val(),
+          password
+        }
+
+        $.ajax({
+          url: 'http://localhost:3000/user',
+          method: 'POST',
+          dataType: 'json',
+          data,
+          timeout: 10000
+        }).done(data => {
+          console.log('data: ', data);
+          if (data.status == 1) {
+            console.log(data.msg);
+          }
+        })
+      });
+    }
+  </script>
+
+
 </body>
 
 </html>
